--- a/frontend/src/components/Spots/SpotsLanding.css
+++ b/frontend/src/components/Spots/SpotsLanding.css
@@ -5,7 +5,7 @@
     gap: 40px;
     margin-left: 100px;
     margin-right: 100px;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
 }
 
 .spot-tile {
@@ -13,7 +13,7 @@
     flex-direction: column;
     width: 300px;
     margin-top: 30px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .spot-tile:hover {
