Add revivew - incomplete

--- a/frontend/src/components/Spots/SpotDetails.css
+++ b/frontend/src/components/Spots/SpotDetails.css
@@ -1,11 +1,11 @@
 .spot-details-div {
     margin-left: 50px;
     margin-right: 50px;
-    border: 1px solid orange;
+    /* border: 1px solid orange; */
 }
 
 .name-and-location {
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .spot-images {
