--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -15,6 +15,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: 3px solid red;
+}
+
+.manage-spots-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    margin-bottom: 20px;
 }
 
 .logout-button {
