--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -12,10 +12,10 @@
     align-items: center;
     width: 300px;
     height: 45px;
-    color: white;
+    /* color: white;
     border: 2px solid black;
     box-shadow: 3px 3px black;
-    background-color: #ff0062;
+    background-color: #ff0062; */
 }
 
 .demo-button {
@@ -24,10 +24,10 @@
     align-items: center;
     width: 300px;
     height: 45px;
-    color: white;
+    /* color: white;
     border: 2px solid black;
     box-shadow: 3px 3px black;
-    background-color: #ff0062;
+    background-color: #ff0062; */
     margin-bottom: 20px;
 }
 
