--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -22,9 +22,9 @@ input {
     margin-bottom: 20px;
     width: 300px;
     height: 45px;
-    color: white;
+    /* color: white;
     border: 2px solid black;
     box-shadow: 3px 3px black;
-    background-color: #ff0062;
+    background-color: #ff0062; */
     cursor: pointer;
 }
