--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -26,11 +26,27 @@
 }
 
 .user-info {
-    background-color: lightgrey;
+    margin-top: 10px;
+    background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 3px solid red;
+    width: 180px;
+    margin-left: -80px;
+    border: 1px solid F4F4F4;
+    border-radius: 15px;
+    box-shadow: 2px 2px 5px 3px rgb(227, 227, 227);
+}
+
+.email-greeting {
+    margin-bottom: 0px;
+}
+
+.user-info-line {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: 1px solid black;
+    width: 150px;
 }
 
 .manage-spots-button {
@@ -38,7 +54,6 @@
     justify-content: center;
     align-items: center;
     color: black;
-    margin-bottom: 20px;
 }
 
 .logout-button {
@@ -46,11 +61,11 @@
     justify-content: center;
     align-items: center;
     color: white;
-    background-color: #ff0062;
+    background-color: #3f7043;
     border-radius: 20px;
     width: 75px;
     height: 25px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .logout-button:hover {
