--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -12,10 +12,10 @@
     align-items: center;
     width: 300px;
     height: 45px;
-    /* color: white;
-    border: 2px solid black;
-    box-shadow: 3px 3px black;
-    background-color: #ff0062; */
+    /* color: white; */
+    /* background-color: #3f7043; */
+    /* border: none;
+    border-radius: 30px; */
 }
 
 .demo-button {
@@ -25,9 +25,9 @@
     width: 300px;
     height: 45px;
     /* color: white;
-    border: 2px solid black;
-    box-shadow: 3px 3px black;
-    background-color: #ff0062; */
+    background-color: #3f7043;
+    border: none;
+    border-radius: 30px; */
     margin-bottom: 20px;
 }
 
