--- a/frontend/src/components/Spots/SpotDetails.css
+++ b/frontend/src/components/Spots/SpotDetails.css
@@ -117,7 +117,7 @@
 .modal-button {
     margin-top: 15px;
     height: 35px;
-    width: 200px;
+    width: auto;
     color: black;
     border-radius: 10px;
     border: none;
@@ -183,7 +183,6 @@
     flex-direction: column;
     align-items: center;
     padding: 15px;
-
 }
 
 .confirm-delete {
@@ -216,7 +215,7 @@
 
 .review-keep-button:hover {
     cursor: pointer;
-    background-color: darkgray;
+    background-color: lightgrey;
 }
 
 .footer-line {
@@ -227,5 +226,5 @@ footer {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    height: 50px;
+    max-height: 50px;
 }
