--- a/frontend/src/components/Spots/SpotsLanding.css
+++ b/frontend/src/components/Spots/SpotsLanding.css
@@ -2,27 +2,25 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.all-spots-div {
+/* .spot-center-div {
     display: flex;
-    flex-wrap: wrap;
-    flex: 0 0 25%;
-    padding: 20px;
-    gap: 30px;
-    /* width: fit-content; */
-    /* display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-gap: 20px;
-    grid-template-rows: auto;
-    justify-content: space-evenly; */
-    border: 1px solid blue;
+    justify-content: center;
+    border: 5px solid orange;
+} */
+
+.spot-align-div {
+    margin-left: 70px;
+    margin-right: 70px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px
 }
 
 .spot-tile {
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
-    width: 380px;
-    margin-top: 50px;
-    border: 1px solid red;
+    width: 300px;
 }
 
 .spot-tile:hover {
@@ -32,7 +30,8 @@
 .spot-image {
     width: 100%;
     height: 300px;
-    border-radius: 30px;
+    border-radius: 20px;
+    object-fit: cover
 }
 
 .city-state-ratings {
@@ -48,8 +47,6 @@
 .price {
     font-weight: bold;
 }
-
-
 
 
 
