--- a/frontend/src/components/Spots/SpotDetails.css
+++ b/frontend/src/components/Spots/SpotDetails.css
@@ -24,6 +24,7 @@
 .left-image {
     width: 100%;
     border-radius: 12px 0 0 12px;
+    object-fit: cover
 }
 
 .right-images-div {
@@ -37,6 +38,7 @@
 
 .right-images {
     width: 49%;
+    object-fit: cover
 }
 
 .host-description-reserve {
