--- a/frontend/src/components/Spots/SpotsLanding.css
+++ b/frontend/src/components/Spots/SpotsLanding.css
@@ -31,7 +31,7 @@
     width: 100%;
     height: 300px;
     border-radius: 20px;
-    object-fit: cover
+    object-fit: cover;
 }
 
 .city-state-ratings {
