--- a/frontend/src/components/Spots/SpotDetails.css
+++ b/frontend/src/components/Spots/SpotDetails.css
@@ -220,7 +220,7 @@
     background-color: lightgrey;
 }
 
-.footer-line {
+/* .footer-line {
     margin-top: 100px;
 }
 
@@ -229,4 +229,4 @@ footer {
     justify-content: center;
     align-items: flex-end;
     max-height: 50px;
-}
+} */
