--- a/frontend/src/components/Spots/SpotForm.css
+++ b/frontend/src/components/Spots/SpotForm.css
@@ -121,7 +121,7 @@ h3 {
     background-color: forestgreen;
 }
 
-.footer-form-line {
+/* .footer-form-line {
     margin-top: 20px;
 }
 
@@ -130,4 +130,4 @@ footer {
     justify-content: center;
     align-items: flex-end;
     height: 50px;
-}
+} */
