--- a/frontend/src/components/Spots/SpotsLanding.css
+++ b/frontend/src/components/Spots/SpotsLanding.css
@@ -13,7 +13,8 @@
     margin-right: 70px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px
+    gap: 20px;
+    margin-bottom: 100px;
 }
 
 .spot-tile {
