--- a/frontend/src/components/Spots/ManageSpots.css
+++ b/frontend/src/components/Spots/ManageSpots.css
@@ -1,6 +1,6 @@
 .manage-spots-div {
-    margin-right: 100px;
-    margin-left: 100px;
+    margin-right: 70px;
+    margin-left: 70px;
 }
 
 .manage-spots-title {
@@ -25,11 +25,10 @@
 }
 
 .current-spots-div {
-    margin-left: 70px;
-    margin-right: 70px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
+    margin-bottom: 100px;
 }
 
 .spot-tile-info {
