--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -1,17 +1,15 @@
-.montserrat-font {
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 12px;
-    font-style: normal;
-  }
-
 .sign-up-form-div {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     width: 350px;
     border-radius: 20px;
+}
+
+.signup-form {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
 }
 
 input {
@@ -23,6 +21,7 @@ input {
     width: 300px;
     height: 45px;
     cursor: pointer;
+    margin-left: 5px;
 }
 
 li {
