fixed delete button colors

--- a/frontend/src/components/Spots/ManageSpots.css
+++ b/frontend/src/components/Spots/ManageSpots.css
@@ -75,14 +75,14 @@
     width: 100%;
     margin-bottom: 12px;
     color: white;
-    background-color: #3f7043;
+    background-color: rgb(219, 3, 3);
     border-radius: 10px;
     border: none;
 }
 
 .delete-spot-button:hover {
     cursor: pointer;
-    background-color: forestgreen;
+    background-color: red;
 }
 
 .keep-spot-button {
